aux: updated and regenerated openapi.json
