# src/app/rest/model/period-dto.ts
@@ -1,18 +1,0 @@
-/**
- * Registration System API
- *
- * 
- *
- * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
- * https://openapi-generator.tech
- * Do not edit the class manually.
- */
-
-
-export interface PeriodDTO { 
-    id?: number;
-    name: string;
-    startDate?: string;
-    endDate?: string;
-}
-
